gcc/testsuite/rust/rustc/ui/coroutine/gen_block_is_no_future.rs
//@compile-flags: --edition 2024 -Zunstable-options
#![feature(gen_blocks)]

fn foo() -> impl std::future::Future { // { dg-error ".E0277." "" { target *-*-* } }
    gen { yield 42 }
}

fn main() {}

